--- a/templates/package.json
+++ b/templates/package.json
@@ -13,14 +13,13 @@
     "@types/es6-shim": "^0.31.39",
     "@types/react": "^16.8.8",
     "@types/webpack-env": "^1.13.9",
-    "antd": "^3.15.2",
+    "mobx": "^4.0.1",
+    "mobx-react": "^5.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-hot-loader": "^4.8.0",
-    "mobx-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "mobx": "^4.0.1"
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
