--- a/templates/package.json
+++ b/templates/package.json
@@ -1,51 +1,83 @@
 {
-  "name": "{{{appName}}}",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "appName",
+  "version": "0.0.40",
+  "main": "src/index.js",
   "author": "{{{authorName}}}",
+  "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --config ./config/webpack.dev.js",
-    "build": "webpack --config ./config/webpack.prod.js"
+    "dev": "DOMAIN_ENV=dev NODE_ENV=dev webpack-dev-server --config ./config/webpack.dev.js",
+    "build:test": "DOMAIN_ENV=dev NODE_ENV=prod webpack --config ./config/webpack.prod.js",
+    "build:prod": "DOMAIN_ENV=prod NODE_ENV=prod webpack --config ./config/webpack.prod.js",
+    "lint:scss": "stylelint ./src/styles/* --fix",
+    "deploy:test": "npm run build:test && scp -r ./dist/* master@10.8.8.8:/home/master/4.0study/dist/xs-h5/",
+    "push:test": "scp -r ./dist/* master@10.8.8.8:/home/master/4.0study/dist/xs-h5/"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.0",
-    "@types/es6-shim": "^0.31.39",
-    "@types/react": "^16.8.8",
-    "@types/webpack-env": "^1.13.9",
-    "mobx": "^4.0.1",
-    "mobx-react": "^5.4.3",
-    "prop-types": "^15.7.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
+    "@types/lodash": "^4.14.132",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "dayjs": "^1.8.14",
+    "lodash": "^4.17.4",
+    "qrcode": "^1.3.3",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-hot-loader": "^4.8.0",
-    "react-router-dom": "^5.0.0"
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
+    "underscore.string": "^3.3.5",
+    "yc-webviewbridge": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/parser": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@typescript-eslint/parser": "^1.5.0",
+    "@types/classnames": "^2.2.7",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.3",
+    "@types/react-redux": "^7.0.5",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "@typescript-eslint/typescript-estree": "^1.5.0",
+    "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
     "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-loader": "^2.1.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-px2rem": "^0.3.0",
     "prettier": "^1.16.4",
     "react-hot-loader": "^4.8.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^10.0.1",
+    "stylelint-config-property-sort-order-smacss": "^4.0.2",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-prettier": "^1.1.0",
+    "stylelint-scss": "^3.6.1",
     "ts-loader": "^5.3.3",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
